fixed 4.0 tsa links

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -69,10 +69,10 @@ default.BigMemoryReleaseNotes=http://www.terracotta.org/confluence/display/relea
 
 ### TMS 4.0
 4.0.TMSsecurity=http://terracotta.org/documentation/tms/tms-security
-4.0.TMSevents=http://terracotta.org/documentation/bigmemorymax/terracotta-server-array/operations#cluster-events
-4.0.RestoreBackup=http://terracotta.org/documentation/bigmemorymax/terracotta-server-array/operations#restore-backup
-4.0.TSAconfig=http://terracotta.org/documentation/bigmemorymax/terracotta-server-array/config-reference
-4.0.TSAsecurity=http://terracotta.org/documentation/bigmemorymax/terracotta-server-array/managing-security
+4.0.TMSevents=http://terracotta.org/documentation/4.0/terracotta-server-array/operations#cluster-events
+4.0.RestoreBackup=http://terracotta.org/documentation/4.0/terracotta-server-array/operations#restore-backup
+4.0.TSAconfig=http://terracotta.org/documentation/4.0/terracotta-server-array/config-reference
+4.0.TSAsecurity=http://terracotta.org/documentation/4.0/terracotta-server-array/managing-security
 
 ### BigMemory Go 4.0
 4.0.BMGTechFaq=http://terracotta.org/documentation/bigmemorygo/technical-faq
