moved all default entries into default section

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -50,11 +50,6 @@ bigmemory.default.update.properties=http://svn.terracotta.org/svn/tc/update-chec
 
 default.TMSerrors=http://terracotta.org/documentation/tms/tms-troubleshooting
 
-### End default
-
-### Sessions 4.0
-4.0.GetStarted=http://terracotta.org/documentation/4.0/web-sessions/get-started
-
 ### Quartz
 Default.RenewQuartzLicense=http://terracotta.org/license/quartz-manager-license-update
 default.QuartzChangeLog=https://jira.terracotta.org/jira/browse/QTZ?report=com.atlassian.jira.plugin.system.project:changelog-panel#selectedTab=com.atlassian.jira.plugin.system.project%3Achangelog-panel
@@ -67,6 +62,15 @@ default.BigMemoryEhcache=http://www.ehcache.org/documentation/bigmemory/index
 default.BigMemoryBetaLicenseKey=http://www.terracotta.org
 default.BigMemoryReleaseNotes=http://www.terracotta.org/confluence/display/release/BigMemory+Go+3.7+Release+Notes
 
+### BigMemoryMax Info
+default.BigMemoryMaxReleaseNotes=http://www.terracotta.org/confluence/display/rel/BigMemory+Max+4.0.0+Release+Notes
+
+################## END OF DEFAULTS #####################################
+
+### Sessions 4.0
+4.0.GetStarted=http://terracotta.org/documentation/4.0/web-sessions/get-started
+
+
 ### TMS 4.0
 4.0.TMSsecurity=http://terracotta.org/documentation/tms/tms-security
 4.0.TMSevents=http://terracotta.org/documentation/4.0/terracotta-server-array/operations#cluster-events
@@ -78,8 +82,6 @@ default.BigMemoryReleaseNotes=http://www.terracotta.org/confluence/display/relea
 4.0.BMGTechFaq=http://terracotta.org/documentation/bigmemorygo/technical-faq
 4.0.BMGGetStarted=http://terracotta.org/documentation/bigmemorygo/get-started
 
-### BigMemoryMax Info
-default.BigMemoryMaxReleaseNotes=http://www.terracotta.org/confluence/display/rel/BigMemory+Max+4.0.0+Release+Notes
 
 ### Start 3.7.0
 3.7.0.AboutConfigurationFiles=http://www.terracotta.org/documentation/product-documentation.html
