--- a/dso/branches/4.1/build-parent/pom.xml
+++ b/dso/branches/4.1/build-parent/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.terracotta</groupId>
     <artifactId>terracotta-root</artifactId>
-    <version>4.1.0</version>
+    <version>4.1.0-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
@@ -31,16 +31,16 @@
     <jetty.version>8.1.12.v20130726</jetty.version>
     <javax.servlet.version>3.0.0.v201112011016</javax.servlet.version>
     <slf4j.version>1.6.6</slf4j.version>
-    <search.version>1.4.2</search.version>
+    <search.version>1.4.3</search.version>
     <security-version>1.3.8</security-version>
     <management-core-version>1.2.3</management-core-version>
-    <management.apps.parent.version>1.2.0</management.apps.parent.version>
+    <management.apps.parent.version>1.2.0-SNAPSHOT</management.apps.parent.version>
     <session-management.version>4.2.0-SNAPSHOT</session-management.version>
     <terracotta-license.version>1.0.11</terracotta-license.version>
     <toolkit-api.version>2.5</toolkit-api.version> 
     <toolkit-api-internal.version>1.12</toolkit-api-internal.version>
     <!-- version of ehcache embedded inside toolkit -->
-    <ehcache.version>2.8.0</ehcache.version>
+    <ehcache.version>2.8.0-SNAPSHOT</ehcache.version>
     <tcconfig.version>4.2.2</tcconfig.version>
     <linked-child-process.version>1.0.8</linked-child-process.version>
     <gmaven-plugin.version>1.4</gmaven-plugin.version>
@@ -91,7 +91,7 @@
       <dependency>
           <groupId>com.terracottatech</groupId>
           <artifactId>fast-restartable-store</artifactId>
-          <version>1.1.13-SNAPSHOT</version>
+          <version>1.1.13</version>
       </dependency>
       <dependency>
         <groupId>org.terracotta.internal</groupId>
