--- a/dso/branches/4.1/system-tests-parent/pom.xml
+++ b/dso/branches/4.1/system-tests-parent/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.terracotta</groupId>
     <artifactId>terracotta-root</artifactId>
-    <version>4.1.0</version>
+    <version>4.1.0-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
