ENG-903 - add 4.1 links to docs

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -66,6 +66,22 @@ default.BigMemoryReleaseNotes=http://www.terracotta.org/confluence/display/relea
 default.BigMemoryMaxReleaseNotes=http://www.terracotta.org/confluence/display/rel/BigMemory+Max+4.0.0+Release+Notes
 
 ################## END OF DEFAULTS #####################################
+### Wawona 4.1 links
+
+### Sessions 4.1
+4.1.GetStarted=http://terracotta.org/documentation/4.1/web-sessions/get-started
+
+
+### TMS 4.1
+4.1.TMSsecurity=http://terracotta.org/documentation/tms/tms-security
+4.1.TMSevents=http://terracotta.org/documentation/4.1/terracotta-server-array/operations#cluster-events
+4.1.RestoreBackup=http://terracotta.org/documentation/4.1/terracotta-server-array/operations#restore-backup
+4.1.TSAconfig=http://terracotta.org/documentation/4.1/terracotta-server-array/config-reference
+4.1.TSAsecurity=http://terracotta.org/documentation/4.1/terracotta-server-array/managing-security
+
+### BigMemory Go 4.1
+4.1.BMGTechFaq=http://terracotta.org/documentation/4.1/bigmemorygo/technical-faq
+4.1.BMGGetStarted=http://terracotta.org/documentation/4.1/bigmemorygo/get-started
 
 ### Sessions 4.0
 4.0.GetStarted=http://terracotta.org/documentation/4.0/web-sessions/get-started
