--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -60,10 +60,10 @@ default.QuartzQuickStart=http://www.quartz-scheduler.org/
 default.BigMemoryQuickStart=http://terracotta.org/documentation/bigmemorymax/get-started 
 default.BigMemoryEhcache=http://www.ehcache.org/documentation/bigmemory/index
 default.BigMemoryBetaLicenseKey=http://www.terracotta.org
-default.BigMemoryReleaseNotes=http://www.terracotta.org/confluence/display/release/BigMemory+Go+3.7+Release+Notes
+default.BigMemoryReleaseNotes=http://www.terracotta.org/confluence/display/release/Home
 
 ### BigMemoryMax Info
-default.BigMemoryMaxReleaseNotes=http://www.terracotta.org/confluence/display/rel/BigMemory+Max+4.0.0+Release+Notes
+default.BigMemoryMaxReleaseNotes=http://www.terracotta.org/confluence/display/release/Home
 
 ################## END OF DEFAULTS #####################################
 ### Wawona 4.1 links
