--- a/update-checker/bigmemory-update-list.properties
+++ b/update-checker/bigmemory-update-list.properties
@@ -1,18 +1,45 @@
 ## Top level keys
 # general.notice = This notice should rarely, if ever, be used as everyone running BigMemory will see it
+4.1.2.updates			= 
+4.1.2.notices			= This is the latest GA release.
+4.1.2.release-notes		=http://www.terracotta.org/confluence/display/release/Home
 
-4.0.1.updates			= 
-4.0.1.notices			= This is the latest GA release.
+4.1.1.updates			= 4.1.2
+4.1.1.notices			= Please upgrade to the latest release of BigMemory.
+4.1.1.release-notes		=http://www.terracotta.org/confluence/display/release/Home
+
+4.1.0.updates			= 4.1.2
+4.1.0.notices			= Please upgrade to the latest release of BigMemory.
+4.1.0.release-notes		=http://www.terracotta.org/confluence/display/release/Home
+
+4.0.5.updates			= 
+4.0.5.notices			= This is the latest GA release.
+4.0.5.release-notes		=http://www.terracotta.org/confluence/display/release/Home
+
+4.0.4.updates			= 4.0.5
+4.0.4.notices			= Please upgrade to the latest release of BigMemory
+4.0.4.release-notes		=http://www.terracotta.org/confluence/display/release/Home
+
+4.0.3.updates			= 4.0.5
+4.0.3.notices			= Please upgrade to the latest release of BigMemory
+4.0.3.release-notes		=http://www.terracotta.org/confluence/display/release/Home
+
+4.0.2.updates			= 4.0.5
+4.0.2.notices			= Please upgrade to the latest release of BigMemory
+4.0.2.release-notes		=http://www.terracotta.org/confluence/display/release/Home
+
+4.0.1.updates			= 4.0.5
+4.0.1.notices			= Please upgrade to the latest release of BigMemory
 4.0.1.release-notes		=http://www.terracotta.org/confluence/display/release/Home
 
-4.0.0.updates			= 4.0.1
+4.0.0.updates			= 4.0.5
 4.0.0.notices			= Please upgrade to the latest release of BigMemory
 4.0.0.release-notes		= http://www.terracotta.org/confluence/display/release/Home
 
-3.7.2.updates			= 4.0.1
+3.7.2.updates			= 4.0.5
 3.7.1.notices			= Please upgrade to the latest release of BigMemory
 3.7.1.release-notes		= http://www.terracotta.org/confluence/display/release/BigMemory+Go+3.7+Release+Notes
 
-3.7.1.updates			= 4.0.1
+3.7.1.updates			= 4.0.5
 3.7.1.notices			= Please upgrade to the latest release of BigMemory
 3.7.1.release-notes		= http://www.terracotta.org/confluence/display/release/BigMemory+Go+3.7+Release+Notes
