--- a/dso/branches/4.1.4-rc/pom.xml
+++ b/dso/branches/4.1.4-rc/pom.xml
@@ -16,6 +16,10 @@
   <name>terracotta-root</name>
   <packaging>pom</packaging>
 
+  <scm>
+    <developerConnection>scm:svn:https://svn.terracotta.org/repo/internal/enterprise/tags/4.1.4</developerConnection>
+  </scm>
+  
   <properties>
     <build.edition>opensource</build.edition>
     <maven-forge-plugin.version>1.2.7</maven-forge-plugin.version>
